# acr-cleaner

./: .ruff.toml  LICENSE  README.md  acr_cleaner.py  pylintrc  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
jh/: pyproject.toml
