[tool.poetry]
name = "acr-cleaner"
version = "0.1.0"
description = ""
authors = ["Wellington Ozorio <well.ozorio@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
azure-containerregistry = "^1.2.0"
azure-identity = "^1.16.0"
colorlog = "^6.8.2"
humanize = "^4.9.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
