[tool.poetry]
name = "acr-cleaner"
version = "0.1.0"
description = ""
authors = ["Wellington Ozorio <well.ozorio@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
azure-containerregistry = "^1.2.0"
azure-identity = "^1.19.0"
colorlog = "^6.9.0"
humanize = "^4.12.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
